package com.directi.training.lsp.exercice_refactored;

public interface Duck {
    public void quack();
    public void swim();
}
