@startuml
'https://plantuml.com/class-diagram

interface Duck
class BasicDuck
class ElectronicDuck
class Pool

interface Duck{
+ quack() : void
+swim() : void
}

class BasicDuck{
+ quack() : void
+ swim() : void
}

class ElectronicDuck{
- _on : boolean
+ quack() : void
+ swim() : void
+ turnOn() : void
+ turnOff() : void
}

class Pool{
+ run() : void
+ quack() : void
+ swim() : void
}

Duck <|.. BasicDuck
Duck <|.. ElectronicDuck

Pool ..> Duck
@enduml